Bonus deliverables are complete:
Added the verbose TLV toggle with state handling, UI controls, and expanded TLV card so users can inspect the most recent transaction
app/src/main/java/com/example/emvnfc/ui/NfcViewModel.kt

app/src/main/java/com/example/emvnfc/MainActivity.kt

app/src/main/res/values/strings.xml

Introduced an instrumentation test that verifies PAN masking on Android, reusing the shared parser
app/src/androidTest/kotlin/com/example/emvnfc/NfcMaskingInstrumentedTest.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="status_reading">Reading card…</string>
     <string name="status_completed">Log captured</string>
     <string name="status_error">Read error</string>
+    <string name="verbose_on">Verbose TLV mode is ON</string>
+    <string name="verbose_off">Enable verbose TLV mode</string>
+    <string name="verbose_header">Latest TLV breakdown</string>
 </resources>
